[workspace]
resolver = "3"
# members = ["etf", "lcrt"]
members = ["lcrt"]

[workspace.dependencies]
petgraph = { version = "0.8.3" , features = ["serde-1"] }
glam = { version = "0.30.8" , features = ["serde"] }
rustc-hash = "2.1.1"
tokio = { version = "1.48.0", features = ["sync", "macros", "time", "rt"] }
serde = { version = "1.0.228" , features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
allow_attributes = "warn"
# cargo = "warn"
get_unwrap = "warn"
nursery = "warn"
panic_in_result_fn = "warn"
pedantic = "warn"
perf = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
todo = "warn"
cognitive_complexity = "warn"
unwrap_used = { level = "warn", allow-unwrap-in-tests = true } # seemingly not working?
