[package]
name = "etf"
version = "0.0.2"
authors.workspace = true
edition.workspace = true
description = "An implementation of the seamless UAV-trajectory algorithm ETF"
readme = "README.md"
homepage = "https://github.com/tomBoddaert/lcrt-etf/tree/main/etf"
repository.workspace = true
license.workspace = true
keywords = ["uav", "path", "pathfinding", "network"]
categories = ["aerospace::drones", "aerospace::unmanned-aerial-vehicles", "network-programming"]
exclude = ["test.ggb", "examples/tree.ggb"]

[dependencies]
common.workspace = true
lcrt.workspace = true
rustc-hash.workspace = true
glam.workspace = true
petgraph.workspace = true

[lints]
workspace = true
