[package]
name = "lcrt"
version = "0.0.0"
edition = "2024"

[dependencies]
rustc-hash.workspace = true
tokio.workspace = true
petgraph.workspace = true
glam.workspace = true
serde.workspace = true

[features]
default = ["tokio-rt-multi-thread"]
tokio-rt-multi-thread = ["tokio/rt-multi-thread"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
