[package]
name = "lcrt"
version = "0.0.2"
authors.workspace = true
edition.workspace = true
homepage = "https://github.com/tomBoddaert/lcrt-etf/tree/main/lcrt"
repository.workspace = true
license.workspace = true

[dependencies]
rustc-hash.workspace = true
petgraph.workspace = true
glam.workspace = true
serde.workspace = true

[lints]
workspace = true
